@@ -20,8 +20,8 @@ class RefundAdmin(admin.ModelAdmin):
     #--------设置页面布局----------------
     fieldsets =(('重要信息', {
                     'classes': ('collapse',),
-                    'fields': (('tid','user','buyer_nick','has_good_return','good_status'),
-                               ('order_status','status','desc'))
+                    'fields': (('tid','user','buyer_nick','has_good_return'),
+                               ('good_status','status','desc'))
                 }),
                 ('参考信息:', {
                     'classes': ('collapse',),
