@@ -57,7 +57,7 @@
         <ul class="object-tools">
           {% block object-tools-items %}
           	<li>
-              <a href="/admin/refunds/refund/add/?_popup=1" class="addlink">
+              <a href="/admin/refunds/refund/add/" class="addlink">
                 新退货款单
               </a>
             </li>
