@@ -64,6 +64,9 @@
 			display:inline;
 			margin-bottom:0px;
 		}
+		.icon-plus{
+			font-size:10px;
+		}
 	</style>
 </head>
 <body>
