@@ -34,7 +34,7 @@
 		<div class="product-content">
 			<table class="table table-bordered table-stdiped table-condensed">
 				<thead>
-					<th>序号</th><th>标题</th><th>规格</th><th>数量</th><th>二次销售</th><th>已确认</th><th>备注</th>	
+					<th>序号</th><th>标题</th><th>规格</th><th>数量</th><th>二次销售</th><th>已处理</th><th>备注</th>	
 				</thead>
 				<tbody>
 					{% for prod in refund_products %}
