@@ -1,3 +1,6 @@
+######### 2013-4-10  ##########
+alter table shop_trades_mergetrade add column is_locked tinyint(1) NOT NULL;
+alter table shop_monitor_systemconfig add column per_requset_num int(11) DEFAULT NULL;
 ######### 2013-3-29  ##########
 alter table shop_monitor_systemconfig add column client_num int(11) DEFAULT 3;
 ######### 2013-3-22  ##########
